src/test/ui/rfc-2093-infer-outlives/nested-enum.stderr
error: rustc_outlives
  --> $DIR/nested-enum.rs:4:1
   |
LL | / enum Foo<'a, T> {
LL | |
LL | |     One(Bar<'a, T>)
LL | | }
   | |_^
   |
   = note: T : 'a

error: aborting due to previous error

